Fix alignment

--- a/src-ui/src/app/components/app-frame/app-frame.component.scss
+++ b/src-ui/src/app/components/app-frame/app-frame.component.scss
@@ -82,7 +82,7 @@
 
   svg {
     position: absolute;
-    left: 1.8em;
+    left: 2rem;
     color: rgba(255, 255, 255, 0.6);
   }
 
